# HorseMod

./: .gitignore  CMakeLists.txt  Readme.md  VERSION  build_and_deploy.bat  build_horse_mod.bat  build_mods_shipping.bat  build_release_github.bat  build_release_thunderstore.bat  myMods.code-workspace  run_game.bat
HorseMod/: CMakeLists.txt  TestIncludes.h  dllmain.cpp
HorseMod/horselib/: BattlePauseRequest.hpp  BattleTimeFreeze.hpp  BytePatch.hpp  CamLock.hpp  CharaInvis.hpp  CodeCave.hpp  EBTracer.hpp  FreeCamera.hpp  GameMode.hpp  GamePause.hpp  HasSubProviderEntryHook.hpp  HorseLib.hpp  KHitWalker.hpp  LineBatcherBackend.hpp  LuxBattleLauncherStartHook.hpp  ModSettings.hpp  NativeBinding.hpp  OnlineRules.hpp  ReplayPlayerGate.hpp  ReplayWatchpoints.hpp  ResetOverride.hpp  SafeMemoryRead.hpp  SetStartPositionHook.hpp  SigScan.hpp  SpeedControl.hpp  VFXOff.hpp  WorldPause.hpp  WorldTickGate.hpp
HorseMod/horselib/GameImGui/: DX11State.hpp  GameImGui.hpp  GamepadInput.hpp  PresentHook.hpp  WndProcHook.hpp  XInputHook.hpp
HorseMod/include/SoulCaliburVI/AIModule/: AIModule.Build.cs
HorseMod/include/SoulCaliburVI/AIModule/Private/: AIBlueprintHelperLibrary.cpp  AIController.cpp  AIDynamicParam.cpp  AIPerceptionComponent.cpp  AITask_MoveTo.cpp  BTCompositeNode.cpp  BTComposite_SimpleParallel.cpp  BTComposite_WeightedRandom.cpp  BTTask_MoveTo.cpp  EnvNamedValue.cpp  EnvOverlapData.cpp  EnvQueryInstanceBlueprintWrapper.cpp
HorseMod/include/SoulCaliburVI/AIModule/Public/: AIBlueprintHelperLibrary.h  AIController.h  AIDataProvider_Random.h  AIDynamicParam.h  AIPerceptionComponent.h  AIPerceptionStimuliSourceComponent.h  AIPerceptionSystem.h  AISense.h  AISenseAffiliationFilter.h  AISenseConfig.h  AISenseConfig_Blueprint.h  AISenseConfig_Hearing.h  AISense_Blueprint.h  AIStimulus.h  AISystem.h  AITask_MoveTo.h  ActorPerceptionBlueprintInfo.h  BTCompositeNode.h  BTComposite_WeightedRandom.h  BTDecorator.h  (+42 more)
HorseMod/include/SoulCaliburVI/AndroidPermission/: AndroidPermission.Build.cs
HorseMod/include/SoulCaliburVI/AnimGraphRuntime/: AnimGraphRuntime.Build.cs
HorseMod/include/SoulCaliburVI/AnimationCore/: AnimationCore.Build.cs
HorseMod/include/SoulCaliburVI/Ansel/: Ansel.Build.cs
HorseMod/include/SoulCaliburVI/ArchVisCharacter/: ArchVisCharacter.Build.cs
HorseMod/include/SoulCaliburVI/AssetRegistry/: AssetRegistry.Build.cs
HorseMod/include/SoulCaliburVI/AudioMixer/: AudioMixer.Build.cs
HorseMod/include/SoulCaliburVI/BuildPatchServices/: BuildPatchServices.Build.cs
HorseMod/include/SoulCaliburVI/CableComponent/: CableComponent.Build.cs
HorseMod/include/SoulCaliburVI/CinematicCamera/: CinematicCamera.Build.cs
HorseMod/include/SoulCaliburVI/ClothingSystemRuntimeInterface/: ClothingSystemRuntimeInterface.Build.cs
HorseMod/include/SoulCaliburVI/CoreUObject/: CoreUObject.Build.cs
HorseMod/include/SoulCaliburVI/CustomMeshComponent/: CustomMeshComponent.Build.cs
HorseMod/include/SoulCaliburVI/Engine/: Engine.Build.cs
HorseMod/include/SoulCaliburVI/EngineMessages/: EngineMessages.Build.cs
HorseMod/include/SoulCaliburVI/EngineSettings/: EngineSettings.Build.cs
HorseMod/include/SoulCaliburVI/FacialAnimation/: FacialAnimation.Build.cs
HorseMod/include/SoulCaliburVI/Foliage/: Foliage.Build.cs
HorseMod/include/SoulCaliburVI/GameplayTags/: GameplayTags.Build.cs
HorseMod/include/SoulCaliburVI/GameplayTasks/: GameplayTasks.Build.cs
HorseMod/include/SoulCaliburVI/GeometryCache/: GeometryCache.Build.cs
HorseMod/include/SoulCaliburVI/HeadMountedDisplay/: HeadMountedDisplay.Build.cs
HorseMod/include/SoulCaliburVI/InputCore/: InputCore.Build.cs
HorseMod/include/SoulCaliburVI/JsonUtilities/: JsonUtilities.Build.cs
HorseMod/include/SoulCaliburVI/Landscape/: Landscape.Build.cs
HorseMod/include/SoulCaliburVI/LevelSequence/: LevelSequence.Build.cs
HorseMod/include/SoulCaliburVI/LightPropagationVolumeRuntime/: LightPropagationVolumeRuntime.Build.cs
HorseMod/include/SoulCaliburVI/LocationServicesBPLibrary/: LocationServicesBPLibrary.Build.cs
HorseMod/include/SoulCaliburVI/LuxorGame/: LuxorGame.Build.cs
HorseMod/include/SoulCaliburVI/MRMesh/: MRMesh.Build.cs
HorseMod/include/SoulCaliburVI/MaterialShaderQualitySettings/: MaterialShaderQualitySettings.Build.cs
HorseMod/include/SoulCaliburVI/MediaAssets/: MediaAssets.Build.cs
HorseMod/include/SoulCaliburVI/MobilePatchingUtils/: MobilePatchingUtils.Build.cs
HorseMod/include/SoulCaliburVI/MoviePlayer/: MoviePlayer.Build.cs
HorseMod/include/SoulCaliburVI/MovieScene/: MovieScene.Build.cs
HorseMod/include/SoulCaliburVI/MovieSceneCapture/: MovieSceneCapture.Build.cs
HorseMod/include/SoulCaliburVI/MovieSceneTracks/: MovieSceneTracks.Build.cs
HorseMod/include/SoulCaliburVI/Niagara/: Niagara.Build.cs
HorseMod/include/SoulCaliburVI/OculusHMD/: OculusHMD.Build.cs
HorseMod/include/SoulCaliburVI/OnlineSubsystem/: OnlineSubsystem.Build.cs
HorseMod/include/SoulCaliburVI/OnlineSubsystemSteam/: OnlineSubsystemSteam.Build.cs
HorseMod/include/SoulCaliburVI/OnlineSubsystemUtils/: OnlineSubsystemUtils.Build.cs
HorseMod/include/SoulCaliburVI/Overlay/: Overlay.Build.cs
HorseMod/include/SoulCaliburVI/PacketHandler/: PacketHandler.Build.cs
HorseMod/include/SoulCaliburVI/PhysXVehicles/: PhysXVehicles.Build.cs
HorseMod/include/SoulCaliburVI/ProceduralMeshComponent/: ProceduralMeshComponent.Build.cs
HorseMod/include/SoulCaliburVI/Renderer/: Renderer.Build.cs
HorseMod/include/SoulCaliburVI/Serialization/: Serialization.Build.cs
HorseMod/include/SoulCaliburVI/SessionMessages/: SessionMessages.Build.cs
HorseMod/include/SoulCaliburVI/Slate/: Slate.Build.cs
HorseMod/include/SoulCaliburVI/SlateCore/: SlateCore.Build.cs
HorseMod/include/SoulCaliburVI/TcpMessaging/: TcpMessaging.Build.cs
HorseMod/include/SoulCaliburVI/UMG/: UMG.Build.cs
HorseMod/include/SoulCaliburVI/UMGUtil/: UMGUtil.Build.cs
HorseMod/include/SoulCaliburVI/UdpMessaging/: UdpMessaging.Build.cs
HorseMod/include/SoulCaliburVI/VectorVM/: VectorVM.Build.cs
HorseMod/include/SoulCaliburVI/WmfMediaFactory/: WmfMediaFactory.Build.cs
(+3291 files in other folders)
